--- a/download-data.ipynb
+++ b/download-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,26 +275,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>photo_id</th>\n",
+       "      <th>photo_image_url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2Q8zDWkj0Yw</td>\n",
+       "      <td>https://images.unsplash.com/photo-141520117961...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tsBDNuCJiLg</td>\n",
+       "      <td>https://images.unsplash.com/photo-141768928330...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A93gsuMxVcE</td>\n",
+       "      <td>https://images.unsplash.com/photo-142981401899...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>oYIdH6bFssk</td>\n",
+       "      <td>https://images.unsplash.com/photo-143275722183...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>wgLPy2YBXuc</td>\n",
+       "      <td>https://images.unsplash.com/photo-143205996405...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([['2Q8zDWkj0Yw',\n",
-       "        'https://images.unsplash.com/photo-1415201179613-bd037ff5eb29'],\n",
-       "       ['tsBDNuCJiLg',\n",
-       "        'https://images.unsplash.com/photo-1417689283303-02397b2eefe9'],\n",
-       "       ['A93gsuMxVcE',\n",
-       "        'https://images.unsplash.com/photo-1429814018991-71b8981733f4'],\n",
-       "       ['oYIdH6bFssk',\n",
-       "        'https://images.unsplash.com/photo-1432757221830-ad504a69f685'],\n",
-       "       ['wgLPy2YBXuc',\n",
-       "        'https://images.unsplash.com/photo-1432059964050-d4eba2ef368a']],\n",
-       "      dtype=object)"
+       "      photo_id                                    photo_image_url\n",
+       "0  2Q8zDWkj0Yw  https://images.unsplash.com/photo-141520117961...\n",
+       "1  tsBDNuCJiLg  https://images.unsplash.com/photo-141768928330...\n",
+       "2  A93gsuMxVcE  https://images.unsplash.com/photo-142981401899...\n",
+       "3  oYIdH6bFssk  https://images.unsplash.com/photo-143275722183...\n",
+       "4  wgLPy2YBXuc  https://images.unsplash.com/photo-143205996405..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,31 +362,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([['2Q8zDWkj0Yw',\n",
-       "        'https://images.unsplash.com/photo-1415201179613-bd037ff5eb29'],\n",
-       "       ['tsBDNuCJiLg',\n",
-       "        'https://images.unsplash.com/photo-1417689283303-02397b2eefe9'],\n",
-       "       ['A93gsuMxVcE',\n",
-       "        'https://images.unsplash.com/photo-1429814018991-71b8981733f4'],\n",
-       "       ...,\n",
-       "       ['GTM-c9mCnCU',\n",
-       "        'https://images.unsplash.com/photo-1591184209368-09d7e848e543'],\n",
-       "       ['6vbYxccNP-o',\n",
-       "        'https://images.unsplash.com/photo-1591509290222-ad64c50fc862'],\n",
-       "       ['TK1z7nRT6aE',\n",
-       "        'https://images.unsplash.com/photo-1591610217257-b3e8b1e99f98']],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Images Downloaded:   6%|▌         | 1523/25000 [31:47<11:33:04,  1.77s/it]"
+     ]
     }
    ],
    "source": [
