Normalizing images before uploading
* Making images square
* Resizing to 960x960
* Parallelizing the download-transform-upload process

--- a/download-images.ipynb
+++ b/download-images.ipynb
@@ -8,7 +8,10 @@
    "source": [
     "import io\n",
     "import requests\n",
+    "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "import boto3"
    ]
   },
@@ -18,12 +21,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm"
+    "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.notebook import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s3 = boto3.client(\"s3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +284,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,89 +296,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>photo_id</th>\n",
-       "      <th>photo_image_url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2Q8zDWkj0Yw</td>\n",
-       "      <td>https://images.unsplash.com/photo-141520117961...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>tsBDNuCJiLg</td>\n",
-       "      <td>https://images.unsplash.com/photo-141768928330...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A93gsuMxVcE</td>\n",
-       "      <td>https://images.unsplash.com/photo-142981401899...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>oYIdH6bFssk</td>\n",
-       "      <td>https://images.unsplash.com/photo-143275722183...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>wgLPy2YBXuc</td>\n",
-       "      <td>https://images.unsplash.com/photo-143205996405...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      photo_id                                    photo_image_url\n",
-       "0  2Q8zDWkj0Yw  https://images.unsplash.com/photo-141520117961...\n",
-       "1  tsBDNuCJiLg  https://images.unsplash.com/photo-141768928330...\n",
-       "2  A93gsuMxVcE  https://images.unsplash.com/photo-142981401899...\n",
-       "3  oYIdH6bFssk  https://images.unsplash.com/photo-143275722183...\n",
-       "4  wgLPy2YBXuc  https://images.unsplash.com/photo-143205996405..."
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df[[\"photo_id\",\"photo_image_url\"]].head()"
+    "# for img_id, url in tqdm(df[[\"photo_id\",\"photo_image_url\"]].values,desc=\"Images Downloaded\"):\n",
+    "#     resp = requests.get(url)\n",
+    "#     b = io.BytesIO(resp.content)\n",
+    "#     b.seek(0)\n",
+    "#     s3.upload_fileobj(b,\"ap-unsplash-images\",f\"{img_id}.jpg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3 = boto3.client(\"s3\")"
+    "def get_crop(img):\n",
+    "    w, h = img.size\n",
+    "    if w > h:\n",
+    "        d = (w - h) / 2\n",
+    "        return (0,-d,w,h+d)\n",
+    "    else:\n",
+    "        d = (h - w) / 2\n",
+    "        return (-d,0,w+d,h)\n",
+    "    \n",
+    "def transform_img(img,new_size=(960,960)):\n",
+    "    return img.crop(get_crop(img)).resize(new_size)\n",
+    "\n",
+    "def load_image(url: str):\n",
+    "    resp = requests.get(url)\n",
+    "    b = io.BytesIO(resp.content)\n",
+    "    return Image.open(b)\n",
+    "\n",
+    "def upload_image(img, img_id: str):\n",
+    "    with io.BytesIO() as b:\n",
+    "        img.save(b,format=\"JPEG\")\n",
+    "        b.seek(0)\n",
+    "        s3.upload_fileobj(b,\"ap-unsplash-images\",f\"reshaped/{img_id}.jpg\")\n",
+    "        \n",
+    "def process_image(url,img_id=None):\n",
+    "    if img_id is None:\n",
+    "        url, img_id = url\n",
+    "    img = load_image(url)\n",
+    "    img = transform_img(img)\n",
+    "    upload_image(img, img_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing import Pool"
    ]
   },
   {
@@ -369,16 +362,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Images Downloaded:   6%|▌         | 1523/25000 [31:47<11:33:04,  1.77s/it]"
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (90326016 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  DecompressionBombWarning,\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (121500000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  DecompressionBombWarning,\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (96012000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  DecompressionBombWarning,\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (144000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  DecompressionBombWarning,\n",
+      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (96000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
+      "  DecompressionBombWarning,\n"
      ]
     }
    ],
    "source": [
-    "for img_id, url in tqdm(df[[\"photo_id\",\"photo_image_url\"]].values,desc=\"Images Downloaded\"):\n",
-    "    resp = requests.get(url)\n",
-    "    b = io.BytesIO(resp.content)\n",
-    "    b.seek(0)\n",
-    "    s3.upload_fileobj(b,\"ap-unsplash-images\",f\"{img_id}.jpg\")"
+    "with Pool() as p:\n",
+    "    p.map(\n",
+    "        process_image,\n",
+    "        df[[\"photo_image_url\",\"photo_id\"]].values\n",
+    "    )"
    ]
   },
   {
