Adding fn `drop_alpha` to drop alpha channel from RGBA images

--- a/download-images.ipynb
+++ b/download-images.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,251 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>photo_id</th>\n",
-       "      <th>photo_url</th>\n",
-       "      <th>photo_image_url</th>\n",
-       "      <th>photo_submitted_at</th>\n",
-       "      <th>photo_featured</th>\n",
-       "      <th>photo_width</th>\n",
-       "      <th>photo_height</th>\n",
-       "      <th>photo_aspect_ratio</th>\n",
-       "      <th>photo_description</th>\n",
-       "      <th>photographer_username</th>\n",
-       "      <th>...</th>\n",
-       "      <th>photo_location_longitude</th>\n",
-       "      <th>photo_location_country</th>\n",
-       "      <th>photo_location_city</th>\n",
-       "      <th>stats_views</th>\n",
-       "      <th>stats_downloads</th>\n",
-       "      <th>ai_description</th>\n",
-       "      <th>ai_primary_landmark_name</th>\n",
-       "      <th>ai_primary_landmark_latitude</th>\n",
-       "      <th>ai_primary_landmark_longitude</th>\n",
-       "      <th>ai_primary_landmark_confidence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2Q8zDWkj0Yw</td>\n",
-       "      <td>https://unsplash.com/photos/2Q8zDWkj0Yw</td>\n",
-       "      <td>https://images.unsplash.com/photo-141520117961...</td>\n",
-       "      <td>2014-11-05 15:26:26.678711</td>\n",
-       "      <td>t</td>\n",
-       "      <td>4192</td>\n",
-       "      <td>2794</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>lanceanderson</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>15854580</td>\n",
-       "      <td>146388</td>\n",
-       "      <td>school of jellyfish swimming in body of water</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>tsBDNuCJiLg</td>\n",
-       "      <td>https://unsplash.com/photos/tsBDNuCJiLg</td>\n",
-       "      <td>https://images.unsplash.com/photo-141768928330...</td>\n",
-       "      <td>2014-12-04 10:31:44.647012</td>\n",
-       "      <td>t</td>\n",
-       "      <td>4324</td>\n",
-       "      <td>2880</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>Surfer in the ocean</td>\n",
-       "      <td>thehungryjpeg</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3157825</td>\n",
-       "      <td>8247</td>\n",
-       "      <td>surfer walking on body of water during daytime</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A93gsuMxVcE</td>\n",
-       "      <td>https://unsplash.com/photos/A93gsuMxVcE</td>\n",
-       "      <td>https://images.unsplash.com/photo-142981401899...</td>\n",
-       "      <td>2015-04-23 18:33:44.024841</td>\n",
-       "      <td>t</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>1333</td>\n",
-       "      <td>1.50</td>\n",
-       "      <td>Barren Countryside</td>\n",
-       "      <td>jeremydgreat</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2159829</td>\n",
-       "      <td>7064</td>\n",
-       "      <td>landscape photo of road beside field of grass</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>oYIdH6bFssk</td>\n",
-       "      <td>https://unsplash.com/photos/oYIdH6bFssk</td>\n",
-       "      <td>https://images.unsplash.com/photo-143275722183...</td>\n",
-       "      <td>2015-05-27 20:07:28.35245</td>\n",
-       "      <td>t</td>\n",
-       "      <td>4288</td>\n",
-       "      <td>2848</td>\n",
-       "      <td>1.51</td>\n",
-       "      <td>Lightbulb reflections</td>\n",
-       "      <td>chelaxydp</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2861489</td>\n",
-       "      <td>11778</td>\n",
-       "      <td>closed up photo of orange lightened lamp</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>wgLPy2YBXuc</td>\n",
-       "      <td>https://unsplash.com/photos/wgLPy2YBXuc</td>\n",
-       "      <td>https://images.unsplash.com/photo-143205996405...</td>\n",
-       "      <td>2015-05-19 18:26:15.223161</td>\n",
-       "      <td>t</td>\n",
-       "      <td>5312</td>\n",
-       "      <td>2988</td>\n",
-       "      <td>1.78</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>csogi</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6037626</td>\n",
-       "      <td>52263</td>\n",
-       "      <td>white clouds and blue sky at daytime</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      photo_id                                photo_url  \\\n",
-       "0  2Q8zDWkj0Yw  https://unsplash.com/photos/2Q8zDWkj0Yw   \n",
-       "1  tsBDNuCJiLg  https://unsplash.com/photos/tsBDNuCJiLg   \n",
-       "2  A93gsuMxVcE  https://unsplash.com/photos/A93gsuMxVcE   \n",
-       "3  oYIdH6bFssk  https://unsplash.com/photos/oYIdH6bFssk   \n",
-       "4  wgLPy2YBXuc  https://unsplash.com/photos/wgLPy2YBXuc   \n",
-       "\n",
-       "                                     photo_image_url  \\\n",
-       "0  https://images.unsplash.com/photo-141520117961...   \n",
-       "1  https://images.unsplash.com/photo-141768928330...   \n",
-       "2  https://images.unsplash.com/photo-142981401899...   \n",
-       "3  https://images.unsplash.com/photo-143275722183...   \n",
-       "4  https://images.unsplash.com/photo-143205996405...   \n",
-       "\n",
-       "           photo_submitted_at photo_featured  photo_width  photo_height  \\\n",
-       "0  2014-11-05 15:26:26.678711              t         4192          2794   \n",
-       "1  2014-12-04 10:31:44.647012              t         4324          2880   \n",
-       "2  2015-04-23 18:33:44.024841              t         2000          1333   \n",
-       "3   2015-05-27 20:07:28.35245              t         4288          2848   \n",
-       "4  2015-05-19 18:26:15.223161              t         5312          2988   \n",
-       "\n",
-       "   photo_aspect_ratio      photo_description photographer_username  ...  \\\n",
-       "0                1.50                    NaN         lanceanderson  ...   \n",
-       "1                1.50    Surfer in the ocean         thehungryjpeg  ...   \n",
-       "2                1.50     Barren Countryside          jeremydgreat  ...   \n",
-       "3                1.51  Lightbulb reflections             chelaxydp  ...   \n",
-       "4                1.78                    NaN                 csogi  ...   \n",
-       "\n",
-       "  photo_location_longitude photo_location_country photo_location_city  \\\n",
-       "0                      NaN                    NaN                 NaN   \n",
-       "1                      NaN                    NaN                 NaN   \n",
-       "2                      NaN                    NaN                 NaN   \n",
-       "3                      NaN                    NaN                 NaN   \n",
-       "4                      NaN                    NaN                 NaN   \n",
-       "\n",
-       "  stats_views  stats_downloads  \\\n",
-       "0    15854580           146388   \n",
-       "1     3157825             8247   \n",
-       "2     2159829             7064   \n",
-       "3     2861489            11778   \n",
-       "4     6037626            52263   \n",
-       "\n",
-       "                                   ai_description ai_primary_landmark_name  \\\n",
-       "0   school of jellyfish swimming in body of water                      NaN   \n",
-       "1  surfer walking on body of water during daytime                      NaN   \n",
-       "2   landscape photo of road beside field of grass                      NaN   \n",
-       "3        closed up photo of orange lightened lamp                      NaN   \n",
-       "4            white clouds and blue sky at daytime                      NaN   \n",
-       "\n",
-       "  ai_primary_landmark_latitude ai_primary_landmark_longitude  \\\n",
-       "0                          NaN                           NaN   \n",
-       "1                          NaN                           NaN   \n",
-       "2                          NaN                           NaN   \n",
-       "3                          NaN                           NaN   \n",
-       "4                          NaN                           NaN   \n",
-       "\n",
-       "   ai_primary_landmark_confidence  \n",
-       "0                             NaN  \n",
-       "1                             NaN  \n",
-       "2                             NaN  \n",
-       "3                             NaN  \n",
-       "4                             NaN  \n",
-       "\n",
-       "[5 rows x 30 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.read_csv(\"data/photos.tsv000\",sep=\"\\t\")\n",
     "df.head()"
@@ -296,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,6 +82,9 @@
     "    \n",
     "def transform_img(img,new_size=(960,960)):\n",
     "    return img.crop(get_crop(img)).resize(new_size)\n",
+    "\n",
+    "def drop_alpha(img):\n",
+    "    return Image.fromarray(np.array(img)[:,:,:3])\n",
     "\n",
     "def load_image(url: str):\n",
     "    resp = requests.get(url)\n",
@@ -340,13 +101,14 @@
     "    if img_id is None:\n",
     "        url, img_id = url\n",
     "    img = load_image(url)\n",
+    "    img = drop_alpha(img)\n",
     "    img = transform_img(img)\n",
     "    upload_image(img, img_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,24 +119,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (90326016 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n",
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (121500000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n",
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (96012000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n",
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (144000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n",
-      "/home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages/PIL/Image.py:2835: DecompressionBombWarning: Image size (96000000 pixels) exceeds limit of 89478485 pixels, could be decompression bomb DOS attack.\n",
-      "  DecompressionBombWarning,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with Pool() as p:\n",
     "    p.map(\n",
